--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -3,8 +3,17 @@ vich_uploader:
 
     mappings:
         posters:
-            uri_prefix: /images/posters
-            upload_destination: '%kernel.project_dir%/public/images/posters'
+            uri_prefix: /uploads/images/posters
+            upload_destination: '%upload_poster_directory%'
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+
+            inject_on_load: false
+            delete_on_update: true
+            delete_on_remove: true
+
+        icons:
+            uri_prefix: '/uploads/images/icons'
+            upload_destination: '%upload_icon_directory%'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
 
             inject_on_load: false
